--- a/Python/Unstructured/H_ISD.ipynb
+++ b/Python/Unstructured/H_ISD.ipynb
@@ -250,9 +250,9 @@
     "    if mode == 'train':\n",
     "        for snr in SNR:\n",
     "            for runIdx in range(0, N_samp):      # ! 20000 x Nt: samples\n",
-    "                H = Generate_channel(Nr, Nt, N_type)\n",
-    "                HH = np.concatenate((np.concatenate((H.real, -H.imag), axis=1),\n",
-    "                                    np.concatenate((H.imag, H.real), axis=1)), axis=0)\n",
+    "                H = Generate_channel(Nt, Nr, N_type)\n",
+    "                HH = np.concatenate((np.concatenate((H.real, H.imag), axis=1),\n",
+    "                                    np.concatenate((-H.imag, H.real), axis=1)), axis=0)\n",
     "                x = np.zeros((2*Nt, NumSubcarriers))\n",
     "                a = calculate_bits(Modulation, NumSubcarriers, NumDataSymb)\n",
     "                DataRaw = np.zeros((Nt, a))\n",
@@ -274,8 +274,6 @@
     "                    x[t+Nt] = mapQ[0]\n",
     "\n",
     "                # transpose\n",
-    "                H = H.transpose()\n",
-    "                HH = HH.transpose()\n",
     "                x = x.transpose()\n",
     "\n",
     "                y_wo_noise = np.matmul(x, HH)\n",
@@ -296,9 +294,9 @@
     "                \n",
     "    else:\n",
     "        for runIdx in range(0, N_samp):      # ! 20000 x Nt: samples\n",
-    "            H = Generate_channel(Nr, Nt, N_type)\n",
-    "            HH = np.concatenate((np.concatenate((H.real, -H.imag), axis=1),\n",
-    "                                np.concatenate((H.imag, H.real), axis=1)), axis=0)\n",
+    "            H = Generate_channel(Nt, Nr, N_type)\n",
+    "            HH = np.concatenate((np.concatenate((H.real, H.imag), axis=1),\n",
+    "                                np.concatenate((-H.imag, H.real), axis=1)), axis=0)\n",
     "            x = np.zeros((2*Nt, NumSubcarriers))\n",
     "            a = calculate_bits(Modulation, NumSubcarriers, NumDataSymb)\n",
     "            DataRaw = np.zeros((Nt, a))\n",
@@ -320,8 +318,6 @@
     "                x[t+Nt] = mapQ[0]\n",
     "\n",
     "            # transpose\n",
-    "            H = H.transpose()\n",
-    "            HH = HH.transpose()\n",
     "            x = x.transpose()\n",
     "\n",
     "            y_wo_noise = np.matmul(x, HH)\n",
@@ -335,7 +331,6 @@
     "            DataSet_y.append(y)                 # ! output sample\n",
     "            \n",
     "            # Imperfect channel: 5%\n",
-    "\n",
     "            DataSet_HH.append(HH)\n",
     "            DataSet_H.append(H)               # ! Generated channel\n",
     "\n",
