update: timer to H_ISD

--- a/Python/Structured/H_structured_ISD.ipynb
+++ b/Python/Structured/H_structured_ISD.ipynb
@@ -640,7 +640,6 @@
     "    def forward(self, Di, H_in, e, xTx, xTy):\n",
     "        e = self.fc1(e)\n",
     "        e = self.fc2(e)\n",
-    "\n",
     "        H, e = self.layer1(Di, H_in, e, xTx, xTy)\n",
     "        H = torch.tanh(H)\n",
     "\n",
@@ -769,6 +768,7 @@
     "H_true, H_raw, H_in, e, xTx, xTy, Di, steering = Input_ISDNN('train', DataSet_x, DataSet_y, DataSet_H, DataSet_HH, DataSet_Steering, N_samp)\n",
     "\n",
     "print(\"Begin training...\") \n",
+    "starttime = timeit.default_timer()\n",
     "\n",
     "while(True):\n",
     "        epoch = epoch + 1 \n",
@@ -818,6 +818,7 @@
     "                if (nmse > best_nmse and early_stop == 3):\n",
     "                        with Record(record_file + '_log.txt'):\n",
     "                                print(epoch, nmse.item(), train_loss.item()) \n",
+    "                                print(str(timeit.default_timer()-starttime))\n",
     "                        break\n",
     "\n",
     "                with Record(record_file + '_log.txt'):\n",
@@ -830,6 +831,7 @@
     "                        print(\"epoch:\\n\", epoch)\n",
     "                        print(\"Latest NMSE:\\n\", nmse.item())\n",
     "                        print(\"Latest Loss:\\n\", train_loss.item()) \n",
+    "                        print(str(timeit.default_timer()-starttime))\n",
     "\n",
     "                break"
    ]
