update: code for HaUI paper

--- a/Python/Structured/H_structured_ISD.ipynb
+++ b/Python/Structured/H_structured_ISD.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {
     "id": "--SvzvIspu-U"
    },
@@ -30,6 +30,7 @@
     "import numpy as np\n",
     "from scipy.stats import rice\n",
     "# import pandas as pd\n",
+    "import pickle\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "from torch.nn import functional as F\n",
@@ -37,8 +38,8 @@
     "import timeit\n",
     "import os\n",
     "\n",
-    "# torch.set_default_tensor_type(torch.cuda.DoubleTensor)\n",
-    "torch.set_default_dtype(torch.float64)"
+    "torch.set_default_tensor_type(torch.cuda.DoubleTensor)\n",
+    "# torch.set_default_dtype(torch.float64)"
    ]
   },
   {
@@ -52,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {
     "id": "06IymVCkpvYS"
    },
@@ -86,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {
     "id": "dlQdA0xHpwF7"
    },
@@ -109,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {
     "id": "xIftC8fvpwir"
    },
@@ -126,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "metadata": {
     "id": "AYhPgAIcqtGT"
    },
@@ -151,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {
     "id": "2LQwZvGaprKZ"
    },
@@ -186,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {
     "id": "AE4Q6jZCq3CY"
    },
@@ -312,9 +313,9 @@
     "SNR         = np.linspace(SNR_min_dB, SNR_max_dB, num=num_dB)\n",
     "\n",
     "\n",
-    "Nt = 8             # Tx: 8\n",
-    "Nr = 64            # Rx: 128\n",
-    "N_samp = 100\n",
+    "Nt = 2             # Tx: 8\n",
+    "Nr = 72            # Rx: 128\n",
+    "N_samp = 10000\n",
     "\n",
     "\n",
     "def Gen_dataset(mode, array_type, snr, imperfect, N_samp):    \n",
@@ -333,8 +334,8 @@
     "    d_H = 1\n",
     "    d_ULA_nor  = 0.5\n",
     "    d_UCA_nor  = 0.5\n",
-    "    Nr_UCA = 16\n",
-    "    Nr_ULA = 4\n",
+    "    Nr_UCA = 24\n",
+    "    Nr_ULA = 3\n",
     "\n",
     "    if array_type == 'ULA':\n",
     "        elements_nor = np.zeros((3, 1, Nr), dtype=float)\n",
@@ -458,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,51 +486,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def NMSE(H_est, H_raw):\n",
+    "#     H_est_1, H_est_2, H_est_3, H_est_4 = reconstruct_channel(H_est)\n",
+    "#     H_est_vec_1 = torch.reshape(H_est_1, [Nt * Nr, 1])\n",
+    "#     H_est_vec_2 = torch.reshape(H_est_2, [Nt * Nr, 1])\n",
+    "#     H_est_vec_3 = torch.reshape(H_est_3, [Nt * Nr, 1])\n",
+    "#     H_est_vec_4 = torch.reshape(H_est_4, [Nt * Nr, 1])\n",
+    "\n",
+    "#     H_raw_vec = torch.reshape(H_raw, [Nt * Nr, 1])\n",
+    "\n",
+    "#     mse_1       = (torch.norm(H_raw_vec - H_est_vec_1)**2) / len(H_raw_vec)\n",
+    "#     mse_2       = (torch.norm(H_raw_vec - H_est_vec_2)**2) / len(H_raw_vec)\n",
+    "#     mse_3       = (torch.norm(H_raw_vec - H_est_vec_3)**2) / len(H_raw_vec)\n",
+    "#     mse_4       = (torch.norm(H_raw_vec - H_est_vec_4)**2) / len(H_raw_vec)\n",
+    "\n",
+    "#     sigEner   = torch.norm(H_raw_vec)**2\n",
+    "\n",
+    "#     nmse_1      = mse_1 / sigEner\n",
+    "#     nmse_2      = mse_2 / sigEner\n",
+    "#     nmse_3      = mse_3 / sigEner\n",
+    "#     nmse_4      = mse_4 / sigEner\n",
+    "\n",
+    "#     # Best nmse\n",
+    "#     nmse        = min([nmse_1, nmse_2, nmse_3, nmse_4])\n",
+    "\n",
+    "#     return torch.abs(nmse)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def NMSE(H_est, H_raw):\n",
     "    H_est_1, H_est_2, H_est_3, H_est_4 = reconstruct_channel(H_est)\n",
-    "    H_est_vec_1 = torch.reshape(H_est_1, [Nt * Nr, 1])\n",
-    "    H_est_vec_2 = torch.reshape(H_est_2, [Nt * Nr, 1])\n",
-    "    H_est_vec_3 = torch.reshape(H_est_3, [Nt * Nr, 1])\n",
-    "    H_est_vec_4 = torch.reshape(H_est_4, [Nt * Nr, 1])\n",
-    "\n",
-    "    H_raw_vec = torch.reshape(H_raw, [Nt * Nr, 1])\n",
-    "\n",
-    "    mse_1       = (torch.norm(H_raw_vec - H_est_vec_1)**2) / len(H_raw_vec)\n",
-    "    mse_2       = (torch.norm(H_raw_vec - H_est_vec_2)**2) / len(H_raw_vec)\n",
-    "    mse_3       = (torch.norm(H_raw_vec - H_est_vec_3)**2) / len(H_raw_vec)\n",
-    "    mse_4       = (torch.norm(H_raw_vec - H_est_vec_4)**2) / len(H_raw_vec)\n",
-    "\n",
-    "    sigEner   = torch.norm(H_raw_vec)**2\n",
-    "\n",
-    "    nmse_1      = mse_1 / sigEner\n",
-    "    nmse_2      = mse_2 / sigEner\n",
-    "    nmse_3      = mse_3 / sigEner\n",
-    "    nmse_4      = mse_4 / sigEner\n",
-    "\n",
-    "    # Best nmse\n",
-    "    nmse        = min([nmse_1, nmse_2, nmse_3, nmse_4])\n",
-    "\n",
-    "    # E = H_raw - H_est\n",
     "    \n",
-    "    # # Tính tổng các bình phương của sự khác biệt\n",
-    "    # sum_squares_E = torch.sum(E * torch.conj(E))\n",
-    "    \n",
-    "    # # Tính tổng các bình phương của các phần tử của ma trận H\n",
-    "    # sum_squares_H = torch.sum(H_raw * torch.conj(H_raw))\n",
-    "    \n",
-    "    # # Tính NMSE\n",
-    "    # nmse = sum_squares_E / sum_squares_H\n",
+    "    # Lấy phần thực của các tensor nếu chúng là complex\n",
+    "    H_est_vec_1 = torch.reshape(H_est_1, [Nt * Nr, 1]).abs()\n",
+    "    H_est_vec_2 = torch.reshape(H_est_2, [Nt * Nr, 1]).abs()\n",
+    "    H_est_vec_3 = torch.reshape(H_est_3, [Nt * Nr, 1]).abs()\n",
+    "    H_est_vec_4 = torch.reshape(H_est_4, [Nt * Nr, 1]).abs()\n",
+    "\n",
+    "    H_raw_vec = torch.reshape(H_raw, [Nt * Nr, 1]).abs()\n",
+    "\n",
+    "    mse_1 = (torch.norm(H_raw_vec - H_est_vec_1)**2) / len(H_raw_vec)\n",
+    "    mse_2 = (torch.norm(H_raw_vec - H_est_vec_2)**2) / len(H_raw_vec)\n",
+    "    mse_3 = (torch.norm(H_raw_vec - H_est_vec_3)**2) / len(H_raw_vec)\n",
+    "    mse_4 = (torch.norm(H_raw_vec - H_est_vec_4)**2) / len(H_raw_vec)\n",
+    "\n",
+    "    sigEner = torch.norm(H_raw_vec)**2\n",
+    "\n",
+    "    nmse_1 = mse_1 / sigEner\n",
+    "    nmse_2 = mse_2 / sigEner\n",
+    "    nmse_3 = mse_3 / sigEner\n",
+    "    nmse_4 = mse_4 / sigEner\n",
+    "\n",
+    "    # Chọn NMSE tốt nhất\n",
+    "    nmse = min([nmse_1, nmse_2, nmse_3, nmse_4])\n",
     "\n",
     "    return torch.abs(nmse)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
    "metadata": {
     "id": "pyjIgxUurU0P"
    },
@@ -586,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "metadata": {
     "id": "GHceh5kuq3ZD"
    },
@@ -614,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 13,
    "metadata": {
     "id": "woRjD7lJssRq"
    },
@@ -671,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 14,
    "metadata": {
     "id": "Vp9fRd3gq3tw"
    },
@@ -706,56 +731,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {
     "id": "jv7lDwyxtFe3"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Begin training...\n",
-      "151.81494249557934\n",
-      "151.4439585628374\n",
-      "150.056862397101\n",
-      "148.96965160041924\n",
-      "151.83364380110564\n",
-      "152.5429018536354\n",
-      "149.99335773560293\n",
-      "146.52119928216143\n",
-      "1 0.48151527105219205 145.05118922087237\n",
-      "100 0.13401732386088797 54.01960500736977\n",
-      "200 0.07087719327048214 31.425596568928512\n",
-      "300 0.0436479373615533 20.43954460342742\n",
-      "400 0.028148564679492526 13.61598562278033\n",
-      "500 0.018193741072513713 8.972124107175722\n",
-      "600 0.011312953086065246 5.576794751247635\n",
-      "700 0.006854386925176191 3.11734213086462\n",
-      "800 0.0042908662674924734 1.5890535130930283\n",
-      "900 0.003292058426438394 1.0188905800008263\n",
-      "1000 0.0029584471125842183 0.8453461353710782\n",
-      "1100 0.002804284574460724 0.7707897501598543\n",
-      "1200 0.0027065621899770216 0.7241375170070676\n",
-      "1300 0.0026268518866994386 0.6870143404543024\n",
-      "1400 0.002554244912705554 0.6553051978419109\n",
-      "1500 0.0024882985080325664 0.6274205531755949\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[45], line 41\u001b[0m\n\u001b[0;32m     38\u001b[0m         H_f[\u001b[38;5;241m0\u001b[39m \u001b[38;5;241m+\u001b[39m batch_size \u001b[38;5;241m*\u001b[39m bs:batch_size \u001b[38;5;241m*\u001b[39m (bs\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m), :, :] \u001b[38;5;241m=\u001b[39m H_o\n\u001b[0;32m     39\u001b[0m         train_loss \u001b[38;5;241m=\u001b[39m loss(H_o, \n\u001b[0;32m     40\u001b[0m                           H_true[\u001b[38;5;241m0\u001b[39m \u001b[38;5;241m+\u001b[39m batch_size \u001b[38;5;241m*\u001b[39m bs:batch_size \u001b[38;5;241m*\u001b[39m (bs\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m), :, :])   \u001b[38;5;66;03m# calculate loss for the predicted output  \u001b[39;00m\n\u001b[1;32m---> 41\u001b[0m         \u001b[43mtrain_loss\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbackward\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m   \u001b[38;5;66;03m# backpropagate the loss \u001b[39;00m\n\u001b[0;32m     42\u001b[0m         optimizer\u001b[38;5;241m.\u001b[39mstep()        \u001b[38;5;66;03m# adjust parameters based on the calculated gradients \u001b[39;00m\n\u001b[0;32m     44\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (epoch \u001b[38;5;241m%\u001b[39m \u001b[38;5;241m100\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m \u001b[38;5;129;01mor\u001b[39;00m epoch \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m):\n",
-      "File \u001b[1;32mc:\\Users\\SON\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\torch\\_tensor.py:487\u001b[0m, in \u001b[0;36mTensor.backward\u001b[1;34m(self, gradient, retain_graph, create_graph, inputs)\u001b[0m\n\u001b[0;32m    477\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m has_torch_function_unary(\u001b[38;5;28mself\u001b[39m):\n\u001b[0;32m    478\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m handle_torch_function(\n\u001b[0;32m    479\u001b[0m         Tensor\u001b[38;5;241m.\u001b[39mbackward,\n\u001b[0;32m    480\u001b[0m         (\u001b[38;5;28mself\u001b[39m,),\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    485\u001b[0m         inputs\u001b[38;5;241m=\u001b[39minputs,\n\u001b[0;32m    486\u001b[0m     )\n\u001b[1;32m--> 487\u001b[0m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mautograd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbackward\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m    488\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgradient\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mretain_graph\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcreate_graph\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minputs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43minputs\u001b[49m\n\u001b[0;32m    489\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mc:\\Users\\SON\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\torch\\autograd\\__init__.py:197\u001b[0m, in \u001b[0;36mbackward\u001b[1;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001b[0m\n\u001b[0;32m    192\u001b[0m     retain_graph \u001b[38;5;241m=\u001b[39m create_graph\n\u001b[0;32m    194\u001b[0m \u001b[38;5;66;03m# The reason we repeat same the comment below is that\u001b[39;00m\n\u001b[0;32m    195\u001b[0m \u001b[38;5;66;03m# some Python versions print out the first line of a multi-line function\u001b[39;00m\n\u001b[0;32m    196\u001b[0m \u001b[38;5;66;03m# calls in the traceback and some print out the last line\u001b[39;00m\n\u001b[1;32m--> 197\u001b[0m \u001b[43mVariable\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_execution_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun_backward\u001b[49m\u001b[43m(\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;66;43;03m# Calls into the C++ engine to run the backward pass\u001b[39;49;00m\n\u001b[0;32m    198\u001b[0m \u001b[43m    \u001b[49m\u001b[43mtensors\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgrad_tensors_\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mretain_graph\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcreate_graph\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minputs\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    199\u001b[0m \u001b[43m    \u001b[49m\u001b[43mallow_unreachable\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maccumulate_grad\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "epoch         = 0\n",
     "expected_epoch = 20000\n",
@@ -764,8 +744,23 @@
     "early_stop    = 0\n",
     "best_model    = ''\n",
     "batch_size    = int(num_samp / 8)\n",
-    "DataSet_x, DataSet_y, DataSet_H, DataSet_HH, DataSet_Steering = Gen_dataset('train', 'UCyA', 0, 0, N_samp)\n",
-    "H_true, H_raw, H_in, e, xTx, xTy, Di, steering = Input_ISDNN('train', DataSet_x, DataSet_y, DataSet_H, DataSet_HH, DataSet_Steering, N_samp)\n",
+    "# DataSet_x, DataSet_y, DataSet_H, DataSet_HH, DataSet_Steering = Gen_dataset('train', 'UCyA', 0, 0, N_samp)\n",
+    "# H_true, H_raw, H_in, e, xTx, xTy, Di, steering = Input_ISDNN('train', DataSet_x, DataSet_y, DataSet_H, DataSet_HH, DataSet_Steering, N_samp)\n",
+    "\n",
+    "# Kiểm tra nếu file tĩnh tồn tại\n",
+    "if os.path.exists('dataset_SISDNN.pkl'):\n",
+    "    with open('dataset_SISDNN.pkl', 'rb') as f:\n",
+    "        DataSet_x, DataSet_y, DataSet_H, DataSet_HH, DataSet_Steering, H_true, H_raw, H_in, e, xTx, xTy, Di, steering = pickle.load(f)\n",
+    "    print(\"Dữ liệu đã được tải từ file tĩnh!\")\n",
+    "else:\n",
+    "    # Sinh dữ liệu nếu file tĩnh không tồn tại\n",
+    "    DataSet_x, DataSet_y, DataSet_H, DataSet_HH, DataSet_Steering = Gen_dataset('train', 'UCyA', 0, 0, N_samp)\n",
+    "    H_true, H_raw, H_in, e, xTx, xTy, Di, steering = Input_ISDNN('train', DataSet_x, DataSet_y, DataSet_H, DataSet_HH, DataSet_Steering, N_samp)\n",
+    "    \n",
+    "    # Lưu dữ liệu để lần sau không phải sinh lại\n",
+    "    with open('dataset_SISDNN.pkl', 'wb') as f:\n",
+    "        pickle.dump((DataSet_x, DataSet_y, DataSet_H, DataSet_HH, DataSet_Steering, H_true, H_raw, H_in, e, xTx, xTy, Di, steering), f)\n",
+    "    print(\"Dữ liệu đã được sinh và lưu lại!\")\n",
     "\n",
     "print(\"Begin training...\") \n",
     "starttime = timeit.default_timer()\n",
@@ -856,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "id": "SfvpexfwthNq"
    },
@@ -867,17 +862,14 @@
     "def test(H_raw, Di, H_in, e, xTx, xTy, N_test, log): \n",
     "    # Load the model that we saved at the end of the training loop \n",
     "    model = model_driven()\n",
-    "    model.load_state_dict(torch.load(best_model)) \n",
+    "    model.load_state_dict(torch.load(best_model, map_location=torch.device('cpu'))) \n",
     "      \n",
     "    with torch.no_grad(): \n",
     "        H_o, e_o = model(Di, H_in, e, xTx, xTy)\n",
     "\n",
     "        nmse = 0\n",
     "        for j in range (N_test):\n",
-    "                # tmp =  H_o[j]\n",
-    "                # tmp1 = tmp.numpy()\n",
-    "                # savemat('H_est.mat', {'H_o': tmp1})\n",
-    "                nmse += NMSE(H_o[j], H_raw[j])\n",
+    "            nmse += NMSE(H_o[j], H_raw[j])\n",
     "\n",
     "        nmse = nmse / N_test\n",
     "        with Record(log):\n",
@@ -891,6 +883,23 @@
    "outputs": [],
    "source": [
     "## Generate dataset for test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def LS(DataSet_x, DataSet_y):\n",
+    "    start = timeit.default_timer()\n",
+    "    for i in range (len(DataSet_x)):\n",
+    "        H_hat = np.matmul(\n",
+    "                    np.matmul(\n",
+    "                        np.linalg.pinv(np.matmul(DataSet_x[i].transpose(), DataSet_x[i])),\n",
+    "                        DataSet_x[i].transpose()),\n",
+    "                        DataSet_y[i])\n",
+    "    print(timeit.default_timer() - start)"
    ]
   },
   {
@@ -909,16 +918,16 @@
     "SNR         = np.linspace(SNR_min_dB, SNR_max_dB, num=num_dB)\n",
     "log         = './model/log_test.txt'\n",
     "\n",
-    "N_test = int(N_samp / 10)\n",
+    "N_test = int(100)\n",
     "\n",
     "for i in range (100):\n",
     "    for snr in SNR:\n",
-    "        with Record(log):\n",
-    "            print(snr)\n",
+    "        # with Record(log):\n",
+    "        #     print(snr)\n",
     "        DataSet_x, DataSet_y, DataSet_H, DataSet_HH, DataSet_Steering = Gen_dataset('test', 'UCyA', 0, 0, N_test)\n",
     "        H_true, H_raw, H_in, e, xTx, xTy, Di, steering = Input_ISDNN('test', DataSet_x, DataSet_y, DataSet_H, DataSet_HH, DataSet_Steering, N_test)\n",
     "\n",
-    "        \n",
+    "        # LS(DataSet_x, DataSet_y)\n",
     "        test(H_raw, Di, H_in, e, xTx, xTy, N_test, log)"
    ]
   }
@@ -928,7 +937,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -943,11 +952,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.6"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "b540dc7c34b7cf08e01b749cd784ab7b1f302abefb3330aee8479ab39c2f7339"
-   }
   }
  },
  "nbformat": 4,
